# Erre2.0

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-backend-on-push.yml  release.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/erre2/: __main__.py  authentication.py  backend_tests.py  configuration.py  dependencies.py  integrations.py
backend/erre2/database/: crud.py  db.py  models.py  schemas.py
backend/erre2/routers/: course.py  server.py  summary.py  users.py
erre2/: authentication.py  backend_tests.py  dependencies.py  main.py
erre2/Files/: pepperoni_secret.md
erre2/database/: crud.py  db.py  models.py  schemas.py
erre2/routers/: course.py  server.py  summary.py  users.py
frontend/erre2-navigator/: package-lock.json  package.json
frontend/erre2-navigator/public/: index.html  manifest.json
frontend/erre2-navigator/src/: App.css  App.js  Routes.js  index.css  index.js  serviceWorkerRegistration.js
frontend/erre2-navigator/src/containers/: Home.js  Home.module.css  NotFound.js  NotFound.module.css  Resume.js  ServerFav.js  ServerSelector.js  ServerSelector.module.css  config.js
frontend/erre2-navigator/src/containers/Instance/: Homepage.js  Homepage.module.css  SummaryPanel.js  SummarySelector.js
frontend/erre2-navigator/src/containers/Instance/Admin/: AdminHome.js  AdminHome.module.css  CorsiPanel.js  CorsoEntry.js  Login.js  Login.module.css  Panel.module.css  ServerPanel.js
frontend/erre2-navigator/src/containers/Instance/Summary/: Commit.js  Download.js  Summary.js  Summary.module.css
frontend/erre2-navigator/src/containers/styles/: select.js
frontend/erre2-navigator/src/libs/: Context.js
(+12 files in other folders)
