[tool.poetry]
name = "erre2.0"
version = "0.1.0"
description = ""
authors = ["Lorenzo Balugani <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
